# nfq-to-wol

./: README.rst  pyproject.toml
.github/workflows/: test.yml
nfq_to_wol/: main.py
templates/: nfq-to-wol.service  nfq-to-wol.yaml
tests/: multi_hosts_config.yaml  test_config.yaml  test_nfq_to_wol.py
